--- a/lab-1/ll-1-overview-presentation.html
+++ b/lab-1/ll-1-overview-presentation.html
@@ -48,7 +48,8 @@ We have some data and want to develop a prediction model. Supervised machine lea
 ## What we'll do in this presentation
 
 - Discussion 1
-- Key Concepts
+- Key Concept: Learning analytics data &amp; frameworks
+- Key Concept: Making predictions
 - Code-along
 - Discussion 2
 - Introduction to the other parts of this learning lab
@@ -59,7 +60,7 @@ We have some data and want to develop a prediction model. Supervised machine lea
 
 .panelset[
 
-.panel[.panel-name[Background, p. 1]
+.panel[.panel-name[Background p1]
 
 
 # What technique should I choose?
@@ -72,7 +73,8 @@ Do you have coded data or data with a known outcome -- let's say about K-12 stud
 
 &lt;bold&gt;&lt;h4&gt;&lt;center&gt;Supervised methods may be your best bet&lt;/center&gt;&lt;/h4&gt;&lt;/bold&gt;
 
-.panel[.panel-name[Background, p. 1]
+.panel[.panel-name[Background p2]
+]
 
 # What technique should I choose?
 
@@ -90,13 +92,13 @@ Do you not yet have codes/outcomes -- and do you want to?
 
 .panel[.panel-name[Getting Started]
 
-Provide an example of supervised machine learning in the context of educational research. Discuss why this counts as machine learning.
+- Provide an example of supervised machine learning in the context of educational research. Discuss why this counts as machine learning.
 
 ]
 
 .panel[.panel-name[Digging Deeper]
 
-What data or context are you interested in for your use of ML?
+- How might presenting the results of a machine learning model differ from presenting those from a more traditional ("explanatory") model? 
 
 ]
 ]
@@ -122,7 +124,7 @@ participation in one of several Massive Open Online Courses (called
 
 ]
 
-.panel[.panel-name[Driving Q.]
+.panel[.panel-name[OULAD]
 
 # Can we predict students' passing of OULAD courses?
 
@@ -144,10 +146,10 @@ These are joined together (see `oulad.R`) for this learning lab. You'll be doing
 
 ```
 ## Rows: 32593 Columns: 15
-## ── Column specification ───────────────────────────────────────────────────────────────────
+## ── Column specification ──────────────────────────────────────────────────────────
 ## Delimiter: ","
-## chr (9): code_module, code_presentation, gender, region, highest_education, imd_band, a...
-## dbl (6): id_student, num_of_prev_attempts, studied_credits, module_presentation_length,...
+## chr (9): code_module, code_presentation, gender, region, highest_education, im...
+## dbl (6): id_student, num_of_prev_attempts, studied_credits, module_presentatio...
 ## 
 ## ℹ Use `spec()` to retrieve the full column specification for this data.
 ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
@@ -155,14 +157,15 @@ These are joined together (see `oulad.R`) for this learning lab. You'll be doing
 
 ```
 ## # A tibble: 3 × 15
-##   code_module code_presentation id_student gender region         highest_education imd_band
-##   &lt;chr&gt;       &lt;chr&gt;                  &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;          &lt;chr&gt;             &lt;chr&gt;   
-## 1 AAA         2013J                  11391 M      East Anglian … HE Qualification  90-100% 
-## 2 AAA         2013J                  28400 F      Scotland       HE Qualification  20-30%  
-## 3 AAA         2013J                  30268 F      North Western… A Level or Equiv… 30-40%  
-## # ℹ 8 more variables: age_band &lt;chr&gt;, num_of_prev_attempts &lt;dbl&gt;, studied_credits &lt;dbl&gt;,
-## #   disability &lt;chr&gt;, final_result &lt;chr&gt;, module_presentation_length &lt;dbl&gt;,
-## #   date_registration &lt;dbl&gt;, date_unregistration &lt;dbl&gt;
+##   code_module code_presentation id_student gender region         highest_education
+##   &lt;chr&gt;       &lt;chr&gt;                  &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;          &lt;chr&gt;            
+## 1 AAA         2013J                  11391 M      East Anglian … HE Qualification 
+## 2 AAA         2013J                  28400 F      Scotland       HE Qualification 
+## 3 AAA         2013J                  30268 F      North Western… A Level or Equiv…
+## # ℹ 9 more variables: imd_band &lt;chr&gt;, age_band &lt;chr&gt;, num_of_prev_attempts &lt;dbl&gt;,
+## #   studied_credits &lt;dbl&gt;, disability &lt;chr&gt;, final_result &lt;chr&gt;,
+## #   module_presentation_length &lt;dbl&gt;, date_registration &lt;dbl&gt;,
+## #   date_unregistration &lt;dbl&gt;
 ```
 
 ]
@@ -200,8 +203,29 @@ transforming, and merging data.
 This is the basic process we'll follow for this and the next two learning labs focused on supervised ML
 
 ]
+]
 
-.panel[.panel-name[Algo.]
+---
+
+# Key Concept: Learning analytics data &amp; frameworks
+
+.panelset[
+
+.panel[.panel-name[Algorithms]
+
+
+- Algorithms (or estimation procedures - or informally models) refer to the _structure_ and _process_ of estimating the _parameters_ of a model
+
+- This definition provides a wide range of options for what kinds of algorithms we use (from simple to very complex, as we discuss in a later learning lab)
+
+- For now, we focus on a familiar, easy to interpret algorithm (e.g., [1](https://dl.acm.org/doi/abs/10.1145/3448139.3448154?casa_token=skmk5XGbDOUAAAAA:Z0Kl4nyjpOGFA6RuFTiiLWaC_KxH1vkQ72Kr0hetXcumRdvu8tPYlCX12AgHr9aS0Fp3L-Uu0p4), also [this](https://linkinghub.elsevier.com/retrieve/pii/S0895435618310813)), _logistic regression_
+- This is a linear model with a binary (*"yes"* or *"no"*) outcome
+- It will be a _bad model_ to start us off!
+- We'll dive into a Random Forest in LL3, setting you up for more involved modeling efforts
+
+]
+
+.panel[.panel-name[Algorithms]
 
 
 - Algorithms (or estimation procedures - or informally models) refer to the _structure_ and _process_ of estimating the _parameters_ of a model
@@ -214,23 +238,11 @@ This is the basic process we'll follow for this and the next two learning labs f
 
 ]
 
-.panel[.panel-name[Algo.]
-
-
-- Algorithms (or estimation procedures - or informally models) refer to the _structure_ and _process_ of estimating the _parameters_ of a model
-
-- This definition provides a wide range of options for what kinds of algorithms we use (from simple to very complex, as we discuss in a later learning lab)
-
-- For now, we focus on a familiar, easy to interpret algorithm (e.g., [1](https://dl.acm.org/doi/abs/10.1145/3448139.3448154?casa_token=skmk5XGbDOUAAAAA:Z0Kl4nyjpOGFA6RuFTiiLWaC_KxH1vkQ72Kr0hetXcumRdvu8tPYlCX12AgHr9aS0Fp3L-Uu0p4), also [this](https://linkinghub.elsevier.com/retrieve/pii/S0895435618310813)), _logistic regression_
-- This is a linear model with a binary (*"yes"* or *"no"*) outcome
-- It will be a _bad model_ to start us off!
-
-]
-
-.panel[.panel-name[Prediction]
+.panel[.panel-name[Predictions]
 
 - When doing supervised ML, we focus on predicting an outcome: how well we do this overall and for particular cases (more on how in the next learning lab)
 - We _do not_ focus on inference or explanation (i.e., an "explanatory" model): model fit, statistical significance, effect sizes, etc.
+- **This is a really key difference -- we use different metrics to evaluate what makes for a good model**
 
 ]
 
@@ -265,7 +277,7 @@ library(tidyverse)
 library(tidymodels)
 
 starwars_recoded &lt;- starwars %&gt;% # built-in data available just by typing
-    mutate(species = ifelse(species_human == "Human", 1, 0)) # recoding species to create a 0-1 outcome
+    mutate(species_human = ifelse(species == "Human", 1, 0)) # recoding species to create a 0-1 outcome
 
 starwars_recoded %&gt;% 
     count(species) # how many humans are there?
@@ -354,15 +366,15 @@ final_fit %&gt;%
 
 .panelset[
 
-.panel[.panel-name[Getting Started]
+.panel[.panel-name[Reflecting]
 
-How might presenting the results of a machine learning model differ from presenting those from a more traditional ("explanatory") model? 
+- Why not use our testing data to evaluate how good our model is?
 
 ]
 
-.panel[.panel-name[Digging Deeper]
+.panel[.panel-name[Applying]
 
-Why not use our testing data to evaluate how good our model is?
+- What data or context are you interested in for your use of ML?
 
 ]
 
@@ -374,9 +386,11 @@ Why not use our testing data to evaluate how good our model is?
 
 .panelset[
 
-.panel[.panel-name[Reading]
+.panel[.panel-name[Readings]
 
 Breiman, L. (2001). Statistical modeling: The two cultures (with comments and a rejoinder by the author). *Statistical Science, 16*(3), 199-231. https://projecteuclid.org/journals/statistical-science/volume-16/issue-3/Statistical-Modeling--The-Two-Cultures-with-comments-and-a/10.1214/ss/1009213726.pdf
+
+Estrellado, R. A., Freer, E. A., Mostipak, J., Rosenberg, J. M., &amp; Velásquez, I. C. (2020). *Data science in education using R. Routledge* (c14), Predicting students’ final grades using machine learning methods with online course data. http://www.datascienceineducation.com/
 
 ]
 
