--- a/lab-2/ll-2-overview-presentation.html
+++ b/lab-2/ll-2-overview-presentation.html
@@ -49,7 +49,8 @@ How do we interpret a machine learning model? What else can we say, besides how 
 ## What we'll do in this presentation
 
 - Discussion 1
-- Key Concepts
+- Key Concept: Accuracy
+- Key Concept: Feature Engineering (part A)
 - Code-along
 - Discussion 2
 - Introduction to the other parts of this learning lab
@@ -77,14 +78,16 @@ Think broadly and not formally (yet): What makes a prediction model a good one?
 
 .panel[.panel-name[Digging Deeper]
 
-After having worked through the first learning lab, have your thoughts on what data you might use for a machine learning study evolved? If so, in what ways? If not, please elaborate on your initial thoughts and plans.
+- After having worked through the first learning lab, have your thoughts on what data you might use for a machine learning study evolved? If so, in what ways? If not, please elaborate on your initial thoughts and plans.
 
 ]
 ]
 
 ---
 
-# Key Concepts
+
+
+# Key Concept: Accuracy
 
 .panelset[
 
@@ -107,6 +110,14 @@ Let's start with accuracy and a simple confusion matrix; what is the **Accuracy*
 
 Use the `tabyl()` function (from {janitor} to calculate the accuracy in the code chunk below.
 
+
+
+
+```r
+data_for_conf_mat %&gt;% 
+    mutate(correct = Outcome == Prediction) %&gt;% 
+    tabyl(correct)
+```
 
 ```
 ##  correct n percent
@@ -163,6 +174,46 @@ False negative (FN): Proportion of the population that is affected by a conditio
 
 ![](img/interpretation-of-metrics.png)
 
+
+]
+]
+
+---
+
+# Key Concept: Feature Engineering (Part A)
+.panelset[
+
+.panel[.panel-name[Why?]
+
+Let's consider a very simple data set, `d`, one with _time_point_ data, `var_a`, for a single student. How do we add this to our model?
+
+
+
+
+```
+## # A tibble: 3 × 3
+##   student_id time_point var_a
+##   &lt;chr&gt;           &lt;int&gt; &lt;dbl&gt;
+## 1 janyia              1  0.01
+## 2 janyia              2  0.32
+## 3 janyia              3  0.32
+```
+
+]
+
+.panel[.panel-name[Why?]
+
+&lt;img src="ll-2-overview-presentation_files/figure-html/unnamed-chunk-7-1.png" width="30%" /&gt;
+
+]
+
+
+.panel[.panel-name[How?]
+
+- We can do all of these things **manually**
+- But, there are also helpful "**{recipes}**" functions to do this
+- Any, the {recipes} package makes it practical to carry out feature engineering steps for not only single variables, but groups of variables (or all of the variables)
+- Examples, all of which start with `step()`, e.g. `step_dummy()`
 
 ]
 ]
@@ -287,15 +338,15 @@ band_members %&gt;% inner_join(band_instruments)
 
 .panelset[
 
-.panel[.panel-name[Getting Started]
+.panel[.panel-name[Reflecting]
 
-
+- Which metrics for supervised machine learning models (in classification "mode") are important to interpret? Why?
 
 ]
 
-.panel[.panel-name[Digging Deeper]
+.panel[.panel-name[Applying]
 
-Why not use our testing data to evaluate how good our model is?
+- Thinking broadly about your research interest, what would you need to consider before using a supervised machine learning model? Consider not only model metrics but also the data collection process and how the predictions may be used.
 
 ]
 
