--- a/introductory-presentation.html
+++ b/introductory-presentation.html
@@ -4,7 +4,7 @@
     <title>Machine Learning (ML) Module: Intro. Presentation</title>
     <meta charset="utf-8" />
     <meta name="author" content="Joshua Rosenberg" />
-    <meta name="date" content="2023-07-02" />
+    <meta name="date" content="2023-07-16" />
     <script src="libs/header-attrs-2.22/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
@@ -39,7 +39,7 @@ class: clear, title-slide, inverse, center, top, middle
 ----
 ### Joshua Rosenberg
 ### https://laser-institute.github.io/machine-learning/introductory-presentation.html#1
-### July 02, 2023
+### July 16, 2023
 
 ---
 
@@ -273,7 +273,7 @@ We'll work to answer these four questions:
 
 **Machine Learning Learning Lab 1: Prediction**
 
-We have some data and want to develop a preidction model. Supervised machine learning is suited to this aim. In particular, in this learning lab, we explore how we can train a computer to predict students' withdrawal from a course. We use a large data set, the Open University Learning Analytics Dataset (OULAD), focusing on student data at this point. Our model at this point is relatively simple, a generalized linear model.
+We have some data and want to develop a preidction model. Supervised machine learning is suited to this aim. In particular, in this learning lab, we explore how we can train a computer to predict students' passing a course. We use a large data set, the Open University Learning Analytics Dataset (OULAD), focusing on student data at this point. Our model at this point is relatively simple, a generalized linear model.
 
 ]
 
