--- a/introductory-presentation.html
+++ b/introductory-presentation.html
@@ -48,6 +48,16 @@ class: clear, inverse, center, middle
 # Front Matter
 ---
 
+## Joshua (Josh) Rosenberg  
+Associate Professor of STEM Education at the University of Tennessee, Knoxville
+
+&lt;img src="img/jr-fam.jpeg" width="20%" style="display: block; margin: auto;" /&gt;
+
+- https://datascienceineducation.com/
+- [Project CREDIBLE](https://cehhs.utk.edu/2023/05/12/data-in-biology-teaching-environments/)
+- *And*: methodological privacy, computational grounded theory, CS education, data science education
+---
+
 # Goals for this module
 
 ### Over-arching goal:
@@ -304,7 +314,9 @@ I hope to see you in the ML topic area learning labs!
 *Dr. Joshua Rosenberg* (jmrosenberg@utk.edu)
 *Dr. Peng  Xu* (hepeng1@msu.edu)
 
-[Slides](https://laser-institute.github.io/machine-learning/introductory-presentation.html#1)
+[These slides (Introductory Presentation)](https://laser-institute.github.io/machine-learning/introductory-presentation.html#1)
+
+[General troubleshooting tips for R and RStudio](https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
