update intro pres

--- a/introductory-presentation.html
+++ b/introductory-presentation.html
@@ -38,7 +38,7 @@ class: clear, title-slide, inverse, center, top, middle
 # Machine Learning (ML) Module: Intro. Presentation
 ----
 ### Joshua Rosenberg
-### https://laser-institute.github.io/machine-learning/introductory-presentation.html#1
+### https://tiny.utk.edu/ml-intro
 ### July 17, 2023
 
 ---
@@ -311,8 +311,8 @@ The previous three learning labs involved the use of data with known outcome var
 
 I hope to see you in the ML topic area learning labs!
 
-*Dr. Joshua Rosenberg* (jmrosenberg@utk.edu; https://joshuamrosenberg.com). 
-*Dr. Peng  Xu* (hepeng1@msu.edu). 
+- *Dr. Joshua Rosenberg* (jmrosenberg@utk.edu; https://joshuamrosenberg.com)
+- *Dr. Peng  Xu* (hepeng1@msu.edu)
 
 [These slides (Introductory Presentation)](https://laser-institute.github.io/machine-learning/introductory-presentation.html#1)
 
