--- a/introductory-presentation.html
+++ b/introductory-presentation.html
@@ -312,7 +312,7 @@ The previous three learning labs involved the use of data with known outcome var
 I hope to see you in the ML topic area learning labs!
 
 - *Dr. Joshua Rosenberg* (jmrosenberg@utk.edu; https://joshuamrosenberg.com)
-- *Dr. Peng  Xu* (hepeng1@msu.edu)
+- *Dr. Peng  He* (hepeng1@msu.edu)
 
 [These slides (Introductory Presentation)](https://laser-institute.github.io/machine-learning/introductory-presentation.html#1)
 
